# InferenceUtils

./: .gitignore  LLAMA_CPP_PYTHON_CMAKE_ENV_ARGS.md  README.md  demo_inferenceutils.py  pyproject.toml  test_llama_cpp_build.py  test_optimal_engine.py  test_systeminfo.py
docs/: DYNAMIC_LIB_INSTALL.md  HARDWARE_PROFILING_INTERNALS.md  MODEL_PREFLIGHT_INTERNALS.md  PHILOSOPHY.md  USAGE.md  WHY_EDGEKIT.md
examples/: auto_install_llama_cpp.py  demo_edgekit.py  demo_inferenceutils.py  test_llama_cpp_build.py  test_macos_memory.py  test_model_preflight.py  test_optimal_engine.py  test_systeminfo.py
src/edgekit/: __init__.py
src/edgekit/hardware/: __init__.py  engine_selector.py  hardware_schema.py  linux_memory.py  macos_memory.py  windows_dxgi.py  windows_memory.py
src/edgekit/models/: __init__.py  exceptions.py  memory_estimator.py  memory_validator.py  metadata_parser.py  model_inspector.py  model_inspector_remote.py  quantization_maps.py
src/edgekit/utils/: __init__.py  imports.py  network.py
src/inferenceutils/: __init__.py  engine_selector.py  hardware_schema.py  inference_engine.py  llama_cpp_env.py  system_info.py
src/inferenceutils/hardware/: inference_engine.py  macos_memory.py  system_info.py
src/inferenceutils/models/: memory_validator.py  quantization_maps.py
