[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferenceutils"
version = "0.1.0"
description = "Hardware inspection with Pydantic schemas for LLM inference engine recommendations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Luke", email = "luke@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["hardware", "inspection", "llm", "inference", "pydantic", "gpu", "cpu", "utils"]

dependencies = [
    "py-cpuinfo",
    "psutil",
    "nvidia-ml-py",
    "amdsmi",
    "openvino",
    "mlx",
    "pyobjc",
    "vulkan",
    "pydantic"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/user/inferenceutils"
Repository = "https://github.com/user/inferenceutils"
"Bug Tracker" = "https://github.com/user/inferenceutils/issues"

[tool.setuptools.packages.find]
where = ["src"] 